# poc-wormhole-bridge-2022

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
programs/wormhole-exploit/: Cargo.toml
programs/wormhole-exploit/src/: lib.rs
tests/: exploit.ts
